:wrench: fix: set align-items center to button container

--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ footer {
 
     display: flex;
     justify-content: flex-end;
-    align-items: flex-start;
+    align-items: center;
   }
   #creations > .button-container > button {
     font-size: 1.15rem;
